--- a/home.html
+++ b/home.html
@@ -7,7 +7,18 @@
     <link rel="stylesheet" href="./basicCSS.css">
 </head>
 <body class="body">
-    <div class="randomFont">Hello World</div>
-    <script src="randomFont.js"></script>
+    <div class="inputBox">
+        <input type="text" placeholder="Type something here..." id="input-1">
+        <button id="btn-1">Done</button>
+    </div>
+
+    <div class="displayBox">
+        <div class="output"></div>
+        <div id="description">
+            <p>记得电影 <a href="https://www.youtube.com/watch?v=9Jc7IST4ABI">《Mean Girl》</a> 里的Burn Book嘛？ 那个特别古怪复古的粉色封面笔记本..我主要是太喜欢那个标题了..所以也做了一个差不多的动态标题.. <br> 在上方输入文字试试看!</p>
+        </div>
+    </div>
+    
+    <script src="burnBook.js"></script>
 </body>
 </html>
